# polar-markdown

./: .gitignore  README.md  index.html  newmarkdown.md  newmarkdownaga.md  newtestd.md  package-lock.json  package.json  release.bat  release.sh  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: How to Use Glacimark.md  How to Use Planning Central.md  How to Use Polar Markdown.md  desktopMarkdownAndDiagramViewerPlan.md  nextsteps.md  test.md
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  models.rs
src-tauri/src/commands/: filesystem.rs  jumplist.rs  mod.rs  watcher.rs
src-tauri/windows/: installer-hooks.nsh
src/lib/: types.ts
src/lib/components/: Backlinks.svelte  Backlinks.test.ts  ContentArea.svelte  ContentArea.test.ts  DiagramOverlay.svelte  DiagramOverlay.test.ts  DocStats.svelte  DocStats.test.ts  EditablePane.svelte  EditablePane.test.ts  FileTree.svelte  FileTree.test.ts  FileTreeItem.svelte  MarkdownEditor.svelte  MarkdownEditor.test.ts  MarkdownViewer.svelte  MarkdownViewer.test.ts  SearchResults.svelte  SearchResults.test.ts  Sidebar.svelte  Sidebar.test.ts  TableOfContents.svelte  TableOfContents.test.ts  Toast.svelte  TocPane.svelte  TocPane.test.ts  TtsControls.svelte
src/lib/services/: codemirror-themes.ts  doc-stats.test.ts  doc-stats.ts  filesystem.test.ts  filesystem.ts  highlight.test.ts  highlight.ts  image-paste.test.ts  image-paste.ts  markdown.test.ts  markdown.ts  mermaid-fixer.test.ts  mermaid-fixer.ts  mermaid-linter.test.ts  sort.ts  (+13 more)
