[package]
name = "app"
version = "0.6.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
notify = { version = "7", features = ["macos_fsevent"] }
walkdir = "2"
svgbob = "0.7"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Com",
    "Win32_Foundation",
] }

[dev-dependencies]
tempfile = "3"
